--- a/src/App.css
+++ b/src/App.css
@@ -81,3 +81,17 @@ body {
   justify-content: flex-end;
   padding: 12px 20px;
 }
+
+.SearchBar {
+  padding: 10px 20px;
+  width: 60%;
+  font-size: 25px;
+  outline: none;
+  margin-top: 10px;
+  display: block;
+  margin:  10px auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
