--- a/src/App.css
+++ b/src/App.css
@@ -83,9 +83,15 @@ body {
 }
 
 .add-movie {
+  margin: 1rem;
   margin-bottom: 100px;
+  padding: 10px;
 }
 
 .add-movie label{
+  width: 100%;
+}
+
+.add-movie input, textarea{
   width: 100%;
 }
