--- a/src/App.css
+++ b/src/App.css
@@ -33,10 +33,20 @@ body {
   flex-direction: column;
   height: 450px;
   margin: 5px;
+  position: relative;
   overflow: hidden;
   width: 300px;
 }
 
+.movie-card-add-favorite {
+  background-color: #007bff;
+  border: none;
+  border-radius: 5px;
+  color: white;
+  position: absolute;
+  right: 5px;
+  top: 10px;
+}
 
 .movie-card-image {
   width: 100%;
