--- a/src/CSS/search-bar.css
+++ b/src/CSS/search-bar.css
@@ -1,8 +1,3 @@
-.form-container {
-  display: flex;
-  flex-direction: column;
-}
-
 .form-container input, select {
-  margin-left: 10px;
+  margin: 0 50px 0 10px;
 }
