--- a/src/App.css
+++ b/src/App.css
@@ -84,9 +84,9 @@ body {
 
 .form-structure {
   background-color: #8a8a8a;
-  display: flex;
   color: white;
-  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  display: flex;
+  font-family: Segoe UI, Tahoma, Geneva, Verdana, sans-serif;
   justify-content: space-around;
   padding: 8px;
 }
