--- a/src/App.css
+++ b/src/App.css
@@ -9,9 +9,9 @@ body {
 
 legend {
   border-radius: 4px;
-  margin: 0 1%;
   font-family: monospace;
   font-size: 18px;
+  margin: 0 1%;
   padding: 0 5px;
 }
 
@@ -33,11 +33,11 @@ form {
   border: 1px solid #343a40;
   color: white;
   display: flex;
-  font-size: 13px;
   font-family: monospace;
+  font-size: 13px;
   justify-content: center;
-  padding: 10px;
   margin: 20px auto 0;
+  padding: 10px;
 }
 
 /* .dropdown {
@@ -60,7 +60,7 @@ form {
 } */
 
 .button-addMovie {
-  background-color: #d3d3d3;
+  background-color: lightgray;
   border: 1px solid rgb(163, 163, 163);
   border-radius: 2px;
 }
